syntax = "proto3";

package book;
option go_package = "./";

service BookService{
  rpc CreateBook (CreateBookInput) returns (Result) {}
}

message CreateBookInput {
  string title = 1;
  string author = 2;
  bool isEnable = 3;
}

message Result {
  int32 code = 1;
  string message = 2;
  string data = 3;
}